--- a/charts/dp-configure-namespace/values.yaml
+++ b/charts/dp-configure-namespace/values.yaml
@@ -36,6 +36,7 @@ rbac:
   ems: true
   pulsar: true
   devHub: true
+  o11y: true
   # Conditional RBACS for ingress controller
   ingressController:
     kong: true
