--- a/charts/o11y-service/templates/configmap.yaml
+++ b/charts/o11y-service/templates/configmap.yaml
@@ -45,6 +45,9 @@ data:
 {{- $svcLogRec := "'[otlp]'" -}}
 {{- $svcLogProc := "'[filter/devnull-logs]'" -}}
 {{- $svcLogExp := "'[debug]'" -}}
+{{- $auditsafeRec := "'[otlp/auditsafe]'" -}}
+{{- $auditsafeProc := "'[filter/devnull-logs]'" -}}
+{{- $auditsafeExp := "'[debug]'" -}}
 {{- $appMetricsRec := "'[otlp]'" }}
 {{- $appMetricsProc := "'[filter/devnull]'" -}}
 {{- $appMetricsExp := "'[debug]'" -}}
