--- a/charts/o11y-service/templates/secrets.yaml
+++ b/charts/o11y-service/templates/secrets.yaml
@@ -76,6 +76,26 @@ stringData:
   LOGS_EXPORTER_SVC_KAFKA_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.services.kafka.password }}
 {{- end }}
 {{- end }}
+##logexporter:auditSafe
+{{- if .Values.global.cp.resources.o11yv3.logsServer.config.exporter.auditSafe.enabled }}
+{{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.exporter.auditSafe.kind "elasticSearch" }}
+  LOGS_EXPORTER_AUDITSAFE_ES_PASSWORD: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.password }}
+{{- range $key, $value := .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.headers }}
+  headers_logs_expo_auditsafe_{{ $key }}: {{ quote $value }}
+{{- end }}
+  headers_logs_expo_auditsafe: |-
+{{- toYaml .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.auditSafe.elasticSearch.headers | nindent 8 }}
+{{- end }}
+{{- end }}
+##logproxy:auditSafe
+{{- if .Values.global.cp.resources.o11yv3.logsServer.config.proxy.auditSafe.enabled }}
+{{- if eq .Values.global.cp.resources.o11yv3.logsServer.config.proxy.auditSafe.kind "elasticSearch" }}
+  logserver-proxy-auditsafe-password: {{ quote .Values.global.cp.resources.o11yv3.logsServer.secret.proxy.auditSafe.elasticSearch.password }}
+{{- range $key, $value := .Values.global.cp.resources.o11yv3.logsServer.secret.proxy.auditSafe.elasticSearch.headers }}
+  headers-logs-proxy-auditsafe-{{ $key }}: {{ quote $value }}
+{{- end }}
+{{- end }}
+{{- end }}
 ##metricsserver:exporter
 {{- if .Values.global.cp.resources.o11yv3.metricsServer.config.exporter.enabled }}
 {{- if eq .Values.global.cp.resources.o11yv3.metricsServer.config.exporter.kind "prometheus" }}
