--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-bootstrap
 description: TIBCO Platform bootstrap chart
 type: application
-version: 1.10.0
-appVersion: "1.10.0"
+version: 1.11.0-alpha.3
+appVersion: "1.11.0"
 keywords:
   - tibco-platform
   - platform
@@ -20,14 +20,14 @@ annotations:
   app.helm.sh/component: control-plane
   app.helm.sh/name: platform-bootstrap
 dependencies:
-  - name: hybrid-proxy
-    version: "1.10.*"
+  - name: hybrid-proxyu ver
+    version: "1.11.*"
     condition: hybrid-proxy.enabled
   - name: resource-set-operator
-    version: "1.10.*"
+    version: "1.11.*"
     condition: resource-set-operator.enabled
   - name: router-operator
-    version: "1.9.*"
+    version: "1.11.*"
     condition: router-operator.enabled
   - name: otel-collector
     version: "0.116.*"
